--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "day:12:b": "node build/day/12/b",
     "day:13:a": "node build/day/13/a",
     "day:13:b": "node build/day/13/b",
+    "day:13:c": "node build/day/13/c",
     "day:14:a": "node build/day/14/a",
     "day:14:b": "node build/day/14/b",
     "day:15:a": "node build/day/15/a",
